force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>