force-app/main/default/objects/Job__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no experience needed</fullName>
            </value>
            <value>
                <fullName>less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 to 3 years</fullName>
            </value>
            <value>
                <fullName>3 to 5 years</fullName>
            </value>
            <value>
                <fullName>more than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>