force-app/main/default/objects/Job__c/fields/External_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Link__c</fullName>
    <label>External Application Link</label>
    <type>Url</type>
</CustomField>