force-app/main/default/objects/Job__c/fields/Publish_end_date__c.field-meta.xml
<CustomField>
    <fullName>Publish_end_date__c</fullName>
    <label>Publish end date</label>
    <type>Date</type>
</CustomField>