force-app/main/default/objects/Job__c/fields/Publish_start_date__c.field-meta.xml
<CustomField>
    <fullName>Publish_start_date__c</fullName>
    <label>Publish start date</label>
    <type>Date</type>
</CustomField>