force-app/main/default/objects/Job__c/fields/Test_Timing__c.field-meta.xml
<CustomField>
    <fullName>Test_Timing__c</fullName>
    <description>This field is for getting the timing for the testing environment</description>
    <label>Test Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 mins</fullName>
            </value>
            <value>
                <fullName>30 mins</fullName>
            </value>
            <value>
                <fullName>45 mins</fullName>
            </value>
            <value>
                <fullName>60 mins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>