force-app/main/default/objects/Job__c/fields/Title_of_position__c.field-meta.xml
<CustomField>
    <fullName>Title_of_position__c</fullName>
    <label>Title of position</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>