force-app/main/default/objects/Job__c/validationRules/Publish_End_Date_Later_Than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_End_Date_Later_Than_Start</fullName>
    <active>true</active>
    <errorConditionFormula>Publish_end_date__c  &gt;  Publish_start_date__c</errorConditionFormula>
    <errorDisplayField>Publish_end_date__c</errorDisplayField>
    <errorMessage>Publish End Date cannot be earlier than Publish Start Date</errorMessage>
</ValidationRule>